<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fondo"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/nubes2"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="570dp"
        android:layout_centerInParent="true"
        android:background="@color/lesswhite">

        <RelativeLayout
            android:id="@+id/rlTitulos"
            android:layout_width="205dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:background="@color/green">

            <TextView
                android:id="@+id/tvTitulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="7dp"
                android:text="@string/titulo1"
                android:textColor="@color/white"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/tvTitulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@+id/tvTitulo1"
                android:text="@string/titulo2"
                android:textColor="@color/gray"
                android:textSize="37dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvcorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlTitulos"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/correo"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etcorreo"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_below="@+id/tvcorreo"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape"
            android:hint="@string/etCorreo"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etcorreo"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_below="@+id/tvpassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape"
            android:hint="@string/etPassword"
            android:inputType="textEmailAddress"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_below="@+id/etpassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/botonEntrar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCuenta"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_below="@+id/btnEntrar"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/botonCuenta"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_below="@+id/btnEntrar"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/btnCuenta"
            android:backgroundTint="@color/white"
            android:text="@string/botonforget"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>